# parallel-ga

./: README.md  pyproject.toml  setup.cfg
examples/: neural_net.py  quadratic.py
parga/: __init__.py  range.py
parga/ga/: crossover.py  mutation.py  parga.py  torch.py
parga/parallel/: mpi.py  multiprocess.py  parga.py  pool.py  single_process.py  worker.py
