[metadata]
name = parga
version = attr: parga.__version__
long_description = file: README.md
long_description_content_type = text/markdown
author = Nicolas Nytko
author_email='nnytko2@illinois.edu',
url = https://github.com/nicknytko/parallel-ga
description = Parallel genetic algorithm implemented in Python
keywords = genetic algorithm
classifiers =
    Programming Language :: Python :: 3

[options]
packages = find:
zip_safe = True
include_package_data = True
install_requires =
    numpy>=1.7.0
    scipy>=0.12.0
    pyamg>=5.0.0